--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,11 @@
     width: 400px;
     margin-left: 50px;
   }
+
+  #login-register-button-container {
+    margin-top: 28px;
+    justify-content: center;
+  }
 }
 
 @media screen and (min-width: 992px) {
